--- a/pages/index.html
+++ b/pages/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <script type="text/javascript" src="../js/test.js"></script>
+    <script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
 </head>
-<body>
+<body onload="Initialize()">
 <canvas id="gamearea" width="600" height="480"></canvas>
 </body>
 </html>
