--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="../js/test.js"></script>
     <script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
 </head>
-<body onload="Initialize()">
-<canvas id="gamearea" width="600" height="480"></canvas>
+<body>
+<canvas id="gameArea"></canvas>
 </body>
 </html>
