--- a/pages/index.html
+++ b/pages/index.html
@@ -3,10 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Test</title>
-    <script type="text/javascript" src="../js/test.js"></script>
     <script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="../js/Objects.js"></script>
+    <script type="text/javascript" src="../js/MainScript.js"></script>
 </head>
-<body>
-<canvas id="gameArea"></canvas>
+<body onload="Initialize()">
+<canvas id="gamearea" width="600" height="480"></canvas>
 </body>
 </html>
