没发现你修改了.. pull了半天没能拿下来你的代码 然后发现得fetch一下.. 把你的修改整合了进来

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../js/Objects.js"></script>
     <script type="text/javascript" src="../js/MainScript.js"></script>
 </head>
-<body onload="Initialize()">
-<canvas id="gamearea" width="600" height="480"></canvas>
+<body>
+<canvas id="gamearea"></canvas>
 </body>
 </html>
