--- a/pages/index.html
+++ b/pages/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Test</title>
+    <link type="text/css" href="../css/index.css" rel="stylesheet"/>
     <script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../js/Objects.js"></script>
     <script type="text/javascript" src="../js/MainScript.js"></script>
