更改了类的声明方式(还没写注释 现在能成功的绘制出玩家所属颜色的20*20方块
已知bug：
20*20的正方形被拉伸成 40+ * 60+ 而且IE11下无法显示任何内容

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <title>Test</title>
     <link type="text/css" href="../css/index.css" rel="stylesheet"/>
     <script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../js/Objects.js"></script>
+    <script type="text/javascript" src="../js/objv2.js"></script>
     <script type="text/javascript" src="../js/MainScript.js"></script>
 </head>
 <body>
