修正了之前的那个移动会残留的问题 完成了圆形三角形矩形的绘制和封装

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Test</title>
     <link type="text/css" href="../css/index.css" rel="stylesheet"/>
     <script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../js/Objects.js"></script>
+    <script type="text/javascript" src="../js/BaseObjects.js"></script>
+    <script type="text/javascript" src="../js/ChessGame.js"></script>
     <script type="text/javascript" src="../js/MainScript.js"></script>
 </head>
 <body>
+<p id="keyOutput">a</p>
 <canvas id="gamearea"></canvas>
 </body>
 </html>
