添加了点击相关 用于移动端测试 暂时注释掉缩放

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="../js/MainScript.js"></script>
 </head>
 <body>
-<p id="keyOutput">a</p>
 <canvas id="gamearea"></canvas>
+<p id="output">a</p>
 </body>
 </html>
