--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <title>Test</title>
     <link type="text/css" href="../css/index.css" rel="stylesheet"/>
+    <link rel="stylesheet" media="all and (orientation:portrait)" href="../css/common-vertical.css">
+    <link rel="stylesheet" media="all and (orientation:landscape)" href="../css/common-horizon.css">
     <script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../js/BaseObjects.js"></script>
     <script type="text/javascript" src="../js/Utils.js"></script>
@@ -11,7 +13,7 @@
     <script type="text/javascript" src="../js/MainScript.js"></script>
 </head>
 <body>
-<canvas id="gamearea"></canvas>
+<canvas id="gamearea" class="mainBlock"></canvas>
 <p id="output">a</p>
 </body>
 </html>
