增加了控件样本 实现了按下 单击 悬浮 离开的事件触发(现在想想 我这是把事件式转成非事件式又转成事件式.. 补全了缺少的分号

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <link type="text/css" href="../css/index.css" rel="stylesheet"/>
     <script type="text/javascript" src="../js/lib/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../js/BaseObjects.js"></script>
+    <script type="text/javascript" src="../js/Controls.js"></script>
     <script type="text/javascript" src="../js/Utils.js"></script>
     <script type="text/javascript" src="../js/ChessGame.js"></script>
     <script type="text/javascript" src="../js/MainScript.js"></script>
