修正了一点点小问题

--- a/Pages/GamePage.html
+++ b/Pages/GamePage.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../Script/library/pixi.js"></script><!--加载pixi引擎-->
     <script type="text/javascript" src="../Script/GameAnimate.js"></script><!--加载游戏所需动画类-->
     <script type="text/javascript" src="../Script/GameEffect.js"></script><!--加载游戏所需特效类-->
+    <script type="text/javascript" src="../Script/GameObject.js"></script><!--加载游戏所需物体类-->
     <script type="text/javascript" src="../Script/GameInitialize.js"></script><!--加载游戏本体(自动开始游戏)-->
 </head>
 <body>
